--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,10 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<!-- Write your code below -->
+<h1> The Best Movies According to Director Maneesh Verma</h1>
+<h2> My top 3 movies of all-time</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3> Kashmir Files</h3>
+<p> This movice was based on true incidents from 1950</p>
+<h3> Kerala Stories</h3>
+<p> This amazing movie was based on true incidents occured on kerala girls. Actress Ada Sharma acted very amazing</p>
+<h3> Bastar</h3>
+<p> This is the movie based on maoist terriorist from chatisgardh state</p>
